
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_8__ TYPE_4__ ;
typedef struct TYPE_7__ TYPE_3__ ;
typedef struct TYPE_6__ TYPE_2__ ;
typedef struct TYPE_5__ TYPE_1__ ;


typedef void* u_char ;
struct TYPE_7__ {void* s_addr; } ;
struct TYPE_5__ {void* s_addr; } ;
struct ip {int ip_hl; int ip_v; int ip_ttl; TYPE_3__ ip_dst; TYPE_1__ ip_src; scalar_t__ ip_off; void* ip_len; void* ip_id; scalar_t__ ip_tos; void* ip_p; } ;
struct TYPE_6__ {void* s_addr; } ;
struct TYPE_8__ {TYPE_2__ sin_addr; } ;


 int class2ip (int *) ;
 int * dst_class ;
 void* dstaddr ;
 void* inet_addr (int ) ;
 void* random () ;
 int * src_class ;
 TYPE_4__ victim ;

__attribute__((used)) static void
inject_iphdr(struct ip *ip, u_char p, u_char len)
{
ip->ip_hl = 5;
ip->ip_v = 4;
ip->ip_p = p;
ip->ip_tos = 0;
ip->ip_id = random();
ip->ip_len = len;
ip->ip_off = 0;
ip->ip_ttl = 255;
ip->ip_dst.s_addr = dst_class != ((void*)0) ?
inet_addr(class2ip(dst_class)) :
dstaddr;
ip->ip_src.s_addr = src_class != ((void*)0) ?
inet_addr(class2ip(src_class)) :
random();
victim.sin_addr.s_addr = ip->ip_dst.s_addr;
}
